Details
-
Bug
-
Resolution: Fixed
-
P2: Important
-
6.6.2, 6.7.0 RC2
-
None
-
f080d0309 (dev), fa081b89f (dev), 80fa9f25b (6.7), 4b1704b8e (6.7), 4c2c0e4bc (6.6), 4be7779de (6.6), fd4f83c4c (tqtc/lts-6.5), ae8b1967f (tqtc/lts-6.5)
Description
I created a little example (with a lot of unused stuff) to understand qmltypes generations for enumeration.
I get the following error
[22/40] Automatic QML type registration for target ui_qml Warning: Refusing to generate non-lowercase name "Flupp" for unknown foreign type [27/40] Building CXX object CMakeFiles/ui_qml.dir/ui_base_ui_qml.cpp.o FAILED: CMakeFiles/ui_qml.dir/ui_base_ui_qml.cpp.o /usr/bin/c++ -DQT_CORE_LIB -DQT_NETWORK_LIB -DQT_NO_DEBUG -DQT_QMLINTEGRATION_LIB -DQT_QML_LIB -I/tmp/p -I/home/andre/hg/QmlDummy -I/tmp/p/ui_qml_autogen/include -I/usr/include/qt6/QtQml/6.6.2 -I/usr/include/qt6/QtQml/6.6.2/QtQml -I/usr/include/qt6/QtCore/6.6.2 -I/usr/include/qt6/QtCore/6.6.2/QtCore -isystem /usr/include/qt6/QtCore -isystem /usr/include/qt6 -isystem /usr/lib/qt6/mkspecs/linux-g++ -isystem /usr/include/qt6/QtQml -isystem /usr/include/qt6/QtQmlIntegration -isystem /usr/include/qt6/QtNetwork -mno-direct-extern-access -MD -MT CMakeFiles/ui_qml.dir/ui_base_ui_qml.cpp.o -MF CMakeFiles/ui_qml.dir/ui_base_ui_qml.cpp.o.d -o CMakeFiles/ui_qml.dir/ui_base_ui_qml.cpp.o -c /tmp/p/ui_base_ui_qml.cpp In file included from /usr/include/qt6/QtQml/qqml.h:9, from /tmp/p/ui_base_ui_qml.h:3, from /tmp/p/ui_base_ui_qml.cpp:1: /tmp/p/ui_base_ui_qml.h:9:17: error: ‘A’ does not name a type 9 | QML_FOREIGN(A) | ^ [28/40] Building CXX object CMakeFiles/ui_qml.dir/ui_qml_qmltyperegistrations.cpp.o FAILED: CMakeFiles/ui_qml.dir/ui_qml_qmltyperegistrations.cpp.o /usr/bin/c++ -DQT_CORE_LIB -DQT_NETWORK_LIB -DQT_NO_DEBUG -DQT_QMLINTEGRATION_LIB -DQT_QML_LIB -I/tmp/p -I/home/andre/hg/QmlDummy -I/tmp/p/ui_qml_autogen/include -I/usr/include/qt6/QtQml/6.6.2 -I/usr/include/qt6/QtQml/6.6.2/QtQml -I/usr/include/qt6/QtCore/6.6.2 -I/usr/include/qt6/QtCore/6.6.2/QtCore -isystem /usr/include/qt6/QtCore -isystem /usr/include/qt6 -isystem /usr/lib/qt6/mkspecs/linux-g++ -isystem /usr/include/qt6/QtQml -isystem /usr/include/qt6/QtQmlIntegration -isystem /usr/include/qt6/QtNetwork -mno-direct-extern-access -MD -MT CMakeFiles/ui_qml.dir/ui_qml_qmltyperegistrations.cpp.o -MF CMakeFiles/ui_qml.dir/ui_qml_qmltyperegistrations.cpp.o.d -o CMakeFiles/ui_qml.dir/ui_qml_qmltyperegistrations.cpp.o -c /tmp/p/ui_qml_qmltyperegistrations.cpp In file included from /usr/include/qt6/QtQml/qqml.h:9, from /tmp/p/ui_qml_qmltyperegistrations.cpp:7: /tmp/p/ui_base_ui_qml.h:9:17: error: ‘A’ does not name a type 9 | QML_FOREIGN(A) | ^ [30/40] Building CXX object CMakeFiles/ui_qmlplugin.dir/ui_qmlplugin_StuffPlugin.cpp.o ninja: build stopped: subcommand failed.
If I move the example enumeration from "base_enum.h" to "qml.h" and remove "qt_generate_foreign_qml_types" from CMakeLists.txt it works without problems.
Even the warning "Refusing to generate non-lowercase name" does not happen.
Attachments
Issue Links
- relates to
-
QTBUG-123592 Foreign generation fails with namespace
-
- Closed
-
For Gerrit Dashboard: QTBUG-123535 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
551329,6 | Fix wrong generation of Q_NAMESPACES | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
551346,4 | Fix namespace in namespace detection of a foreign type | dev | qt/qtdeclarative | Status: MERGED | +2 | 0 |
551791,2 | Fix wrong generation of Q_NAMESPACES | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
551792,2 | Fix namespace in namespace detection of a foreign type | 6.7 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
551888,5 | Fix namespace in namespace detection of a foreign type | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
551889,4 | Fix wrong generation of Q_NAMESPACES | 6.6 | qt/qtdeclarative | Status: MERGED | +2 | 0 |
552172,2 | Fix wrong generation of Q_NAMESPACES | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |
552173,2 | Fix namespace in namespace detection of a foreign type | tqtc/lts-6.5 | qt/tqtc-qtdeclarative | Status: MERGED | +2 | 0 |