Fix wrong generation of Q_NAMESPACES

Generate Q_NAMESPACE if foreign type is a namespace.
Add compilation test for this only.

Fixes: QTBUG-123535
Pick-to: 6.5
Change-Id: Iacce6681a3fba468c1a9646630c871e2553d56bd
Reviewed-by: Ulf Hermann <ulf.hermann@qt.io>
(cherry picked from commit f080d0309d4c1d0d8a96dabe832162c5f41b881f)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>
(cherry picked from commit 4b1704b8e050755de7b86ab0f1b0dd262ca98982)